--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
       "removeComments": true,
       "preserveConstEnums": true,
       "outFile": "./build/build.js",
-      "sourceRoot": "./src/",
       "rootDir": "./src/",
-      "sourceMap": false
+      "sourceMap": false,
+      "watch": true
     }
-  }
+}
